cursive-bootstrap/tests/ui/E-CON/E-CON-0011.cursive
// RUN: compile-fail
// DIAG: E-CON-0011
// SPEC: 8.9
// DESC: Detectable key ordering cycle within procedure

record A {
    value: i32
}

record B {
    value: i32
}

procedure key_cycle(a: shared A, b: shared B) -> () {
    # write a {
        # write b {  //~ ERROR E-CON-0011: key ordering cycle
            a.value = b.value
        }
    }
    # write b {
        # write a {
            b.value = a.value
        }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
